db-cluster/users/k8s-cluster2/ns-porkeat-c18c6214/aefawe-3bcf75d3/ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: aefawe-3bcf75d3-tcp
  namespace: ns-porkeat-c18c6214
spec:
  entryPoints:
  - postgresql
  routes:
  - match: 'HostSNI(`aefawe.seang.shop`) '
    services:
    - name: aefawe-3bcf75d3-postgresql-rw
      port: null
  tls:
    passthrough: true
